# SimpleFlow

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json  you_can_talk_to_other_claude_in_here.txt
.claude/: settings.local.json
.claude/commands/: build.md  run.md  test.md
config/: default.toml
docs/: full-summary.md
include/config/: config.hpp
include/core/: input_manager.hpp  input_source.hpp
planning/: 0-roadmap.md  1-foundation.md  MASTER_PLAN.md  tech-stack.md
research/: 0-research-index.md  agent-briefing-motor-disability-research.md
research/agent-outputs/: academic-research-review.md  alternative-inputs-findings.md  chord-input-and-context-commands-findings.md  competitive-analysis-findings.md  competitive-analysis.md  computer-vision-findings.md  eye-tracking-landscape.md  input-modalities-findings.md  interaction-ux-findings.md  motor-disability-comprehensive-research.md  performance-findings.md  users-findings.md  voice-recognition-research.md
research/agent-workflows/: README.md  template-a-deep-domain-research.md  template-b-competitive-analysis.md  template-c-technical-feasibility.md  template-d-cross-domain-synthesis.md  template-e-rapid-prototype-planning.md
research/decisions/: 001-eye-tracking-method.md  002-multi-modal-architecture.md  README.md  adr-template.md  build-vs-integrate-decision-tree.md  technology-evaluation-matrix.md
research/explorations/: README.md  experiment-template.md
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_config.cpp  test_input_manager.cpp  test_input_source.cpp  test_main.cpp
(+6 files in other folders)
